# MTG-Card-API

./: LICENSE  README.md  main.py  pyproject.toml
src/mtg_card_api/: __init__.py  _utils.py  mtg_scryfall_api.py
